# cell-nuclei-segmentation

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conda.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  Dockerfile.stardist  devcontainer.json  docker-compose.yaml
.dvc/: config
.github/workflows/: test-action.yml
conf/base/: catalog.yml  logging.yml
conf/base/parameters/: data_augmentations.yml  data_preprocessing.yml  model_config.yml  model_evaluation.yml  results_visualization.yml
data/06_models/: finetuned.dvc
docs/source/: conf.py  index.rst
src/: setup.py
src/cell_nuclei_segmentation/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/cell_nuclei_segmentation/extras/datasets/: cell_nuclei_datasets.py  stardist_model.py
src/cell_nuclei_segmentation/pipelines/data_augmentations/: nodes.py  pipeline.py
src/cell_nuclei_segmentation/pipelines/data_download/: nodes.py  pipeline.py
src/cell_nuclei_segmentation/pipelines/data_preprocessing/: nodes.py  pipeline.py
src/cell_nuclei_segmentation/pipelines/model_evaluation/: nodes.py  pipeline.py
src/cell_nuclei_segmentation/pipelines/model_training/: nodes.py  pipeline.py
src/cell_nuclei_segmentation/pipelines/results_visualization/: nodes.py  pipeline.py
src/tests/: test_run.py
