[tool.kedro]
package_name = "cell_nuclei_segmentation"
project_name = "cell-nuclei-segmentation"
kedro_init_version = "0.18.8"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/cell_nuclei_segmentation -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "cell-nuclei-segmentation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cell_nuclei_segmentation"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
kedro = "^0.18.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
